# ccs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  commitlint.config.js  install.sh  release-please-config.json
.github/workflows/: build-release.yml  ci.yml  commitlint.yml  release-please.yml
config/: config.example.toml  config.example.yaml  mcp-servers.example.toml  mcp-servers.example.yaml
docker/: Dockerfile
src/: auth.rs  cleanup.rs  config.rs  docker.rs  git.rs  main.rs  mcp.rs  secrets.rs  toolchain.rs
